--- a/css/dev/app.css
+++ b/css/dev/app.css
@@ -116,7 +116,7 @@ input[type="number"] {
 .ibg--top-left {
   object-position: top left;
 }
-.fav-btn, .item-product__title a, .social a {
+.fav-btn, .item-product__category a, .social a {
   transition: all 0.3s;
   color: var(--text-color);
 }
@@ -301,22 +301,24 @@ input[type="number"] {
   gap: 0.9375rem;
 }
 .item-product__body {
-  padding: 1.25rem 1.25rem 0;
+  padding: 1.75rem 1.25rem 0;
 }
-.item-product__title a {
+.item-product__category a {
   color: var(--text-color);
   font-size: 1.5rem;
   font-weight: 500;
   text-transform: uppercase;
-  display: flex;
-  flex-direction: column;
-  gap: 0.625rem;
 }
-.item-product__title span {
+.item-product__category:not(:last-child) {
+  margin-bottom: 0.9375rem;
+}
+.item-product__title {
   color: #e2102e;
   display: block;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+  font-size: 1.5rem;
+  text-transform: uppercase;
 }
 .item-product__title:not(:last-child) {
   margin-bottom: 1.25rem;
@@ -1166,7 +1168,13 @@ body::after {
   .item-product__body {
     padding: 0.625rem 0.625rem 0;
   }
-  .item-product__title a {
+  .item-product__category a {
+    font-size: 1.125rem;
+  }
+  .item-product__category:not(:last-child) {
+    margin-bottom: 0.625rem;
+  }
+  .item-product__title {
     font-size: 1.125rem;
   }
   .item-product__title:not(:last-child) {
@@ -1321,7 +1329,7 @@ body::after {
     aspect-ratio: auto;
   }}
 @media (any-hover: hover){
-  .fav-btn:hover, .item-product__title a:hover, .social a:hover {
+  .fav-btn:hover, .item-product__category a:hover, .social a:hover {
     color: #e2102e;
   }
   .button--border:hover {
