--- a/css/dev/app.css
+++ b/css/dev/app.css
@@ -1070,13 +1070,18 @@ input[type="number"] {
   font-size: 1.25rem;
   max-width: 3.625rem;
 }
-.item-cart__size-label {
+.item-cart__options {
   grid-row: 3;
   grid-column: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3125rem;
+}
+.item-cart__option {
   font-family: "Roboto", sans-serif;
   font-size: 0.875rem;
 }
-.item-cart__size-label span {
+.item-cart__option span {
   font-weight: 700;
 }
 .item-cart__price {
@@ -2333,7 +2338,7 @@ body::after {
 .basket-header__item .item-cart__counter .counter__input {
   max-width: 2.5rem;
 }
-.basket-header__item .item-cart__size-label {
+.basket-header__item .item-cart__options {
   grid-column: 2/4;
 }
 .basket-header__item .item-cart__price {
