--- a/css/dev/app.css
+++ b/css/dev/app.css
@@ -4261,7 +4261,7 @@ body::after {
 
 .hero__items {
   display: grid;
-  grid-template-columns: 440fr 900fr 440fr;
+  grid-template-columns: repeat(4, 1fr);
   gap: 1.25rem;
 }
 .hero__item {
@@ -4275,8 +4275,9 @@ body::after {
   overflow: hidden;
   padding: 0.625rem;
 }
-.hero__item:nth-child(5n+2) {
+.hero__item:nth-child(2) {
   grid-row: span 2;
+  grid-column: span 2;
   aspect-ratio: auto;
 }
 .hero__item img {
@@ -4290,9 +4291,9 @@ body::after {
 }
 .hero__title {
   color: #111;
-  font-size: 2rem;
   font-weight: 500;
   text-transform: uppercase;
+  font-size: 2rem;
   line-height: 1.3;
   padding: 0.5rem 0.625rem;
   background-color: #fff;
@@ -4310,6 +4311,7 @@ body::after {
   line-height: 1.3;
   padding: 0.375rem 0.625rem;
   position: relative;
+  text-align: center;
   z-index: 2;
   background-color: #fff;
 }
@@ -5505,6 +5507,9 @@ body::after {
   .hero-product__slider:not(:last-child) {
     margin-bottom: 1.625rem;
   }
+  .hero__title {
+    font-size: 1.25rem;
+  }
   .hero__subtitle {
     font-size: 0.875rem;
   }
@@ -6005,17 +6010,18 @@ body::after {
     grid-template-columns: repeat(2, 1fr);
     gap: 0.625rem;
   }
-  .hero__item:nth-child(5n+2) {
+  .hero__item:nth-child(2) {
     grid-row: auto;
     grid-column: span 2;
     aspect-ratio: 1/1;
   }
-  .hero__item:nth-child(5n+3) {
+  .hero__item:nth-child(3) {
     grid-row: 1;
     grid-column: 2;
   }
   .hero__title {
     padding: 0.40625rem 0.625rem;
+    font-size: 0.875rem;
   }
   .banner-home__body {
     aspect-ratio: 300/202;
@@ -6652,10 +6658,6 @@ body::after {
   .catalog__items {
     gap: 0.625rem;
   }}
-@media (max-width: 23.4375em){
-  .hero__title {
-    font-size: 0.875rem;
-  }}
 @media (max-width: 20em){
   .mission-section__text {
     font-size: 0.75rem;
@@ -6734,10 +6736,6 @@ body::after {
   .article__title {
     font-size: clamp( 1.5rem , 1.19032258064375rem  +  1.5483870968vw , 3rem );
   }}
-@media (min-width: 23.4375em) and (max-width: 47.99875em){
-  .hero__title {
-    font-size: clamp( 0.875rem , -0.19852791490625rem  +  4.5803857703vw , 2rem );
-  }}
 @media (min-width: 31.24875em){
   .basket-header__item .item-cart__price {
     grid-row: 4;
@@ -6799,10 +6797,6 @@ body::after {
   .reviews-product__container {
     gap: 1.25rem;
   }}
-@media (min-width: 47.99875em) and (max-width: 116.875em){
-  .hero__title {
-    font-size: clamp( 0.875rem , 0.09100560788125rem  +  1.6333641858vw , 2rem );
-  }}
 @media (min-width: 47.99875em){
   .item-product--look .item-product__body {
     padding-top: 1.25rem;
@@ -6853,9 +6847,6 @@ body::after {
   }
   .mobile {
     display: none !important;
-  }
-  .hero__title {
-    font-size: 2rem;
   }
   .contacts__button {
     min-height: 4.25rem;
@@ -7059,9 +7050,6 @@ body::after {
   }
   .hero-product__container {
     gap: 4.5625rem;
-  }
-  .hero__title {
-    font-size: 2rem;
   }
   .contacts__wrapper {
     gap: 6.875rem;
